[gd_scene load_steps=6 format=3 uid="uid://l2mxisy85ciw"]

[ext_resource type="Script" path="res://scenes/maps/lobby/lobby.gd" id="1_dytr5"]
[ext_resource type="PackedScene" uid="uid://c243bu478e0su" path="res://scenes/ui/chat/chat.tscn" id="2_kl6mk"]
[ext_resource type="Script" path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" id="3_4702b"]
[ext_resource type="Texture2D" uid="uid://duukre1yumet7" path="res://scenes/player/assets/all_characters_spritesheet.png" id="3_qud84"]
[ext_resource type="Script" path="res://scenes/maps/lobby/SkinOptionButton.gd" id="4_oewbt"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dytr5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.352941, 0.352941, 0.443137, 1)

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 268.0
offset_right = 125.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
text = "Rozpocznij grę"

[node name="PlayerList" type="Label" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 32.0
offset_right = 1248.0
offset_bottom = 608.0

[node name="Chat" parent="." instance=ExtResource("2_kl6mk")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = -641.0
offset_bottom = -112.0

[node name="SkinSelect" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkinSelectLabel" type="Label" parent="SkinSelect"]
layout_mode = 0
offset_left = 705.0
offset_top = 93.0
offset_right = 871.0
offset_bottom = 119.0
text = "Wybierz swoją postać"

[node name="SelectedSkin" type="Sprite2D" parent="SkinSelect"]
position = Vector2(785, 210)
scale = Vector2(0.18, 0.18)
texture = ExtResource("3_qud84")
hframes = 10

[node name="SkinOptionButton" type="OptionButton" parent="SkinSelect"]
layout_mode = 0
offset_left = 707.0
offset_top = 297.0
offset_right = 871.0
offset_bottom = 328.0
alignment = 1
item_count = 10
selected = 0
popup/item_0/text = "Alternatywka"
popup/item_0/id = 0
popup/item_1/text = "Nerd"
popup/item_1/id = 1
popup/item_2/text = "3rd"
popup/item_2/id = 2
popup/item_3/text = "4th"
popup/item_3/id = 3
popup/item_4/text = "5th"
popup/item_4/id = 4
popup/item_5/text = "6th"
popup/item_5/id = 5
popup/item_6/text = "7th"
popup/item_6/id = 6
popup/item_7/text = "8th"
popup/item_7/id = 7
popup/item_8/text = "9th"
popup/item_8/id = 8
popup/item_9/text = "10th"
popup/item_9/id = 9
script = ExtResource("4_oewbt")

[node name="ServerAdvertiser" type="Node" parent="."]
script = ExtResource("3_4702b")

[connection signal="button_down" from="StartGameButton" to="." method="_on_start_game_button_button_down"]
[connection signal="item_selected" from="SkinSelect/SkinOptionButton" to="SkinSelect/SkinOptionButton" method="_on_item_selected"]
